--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -21,15 +21,9 @@
       <%= link_to "Login", new_user_session_path %>
     <% end %>
     
-    <%= yield %>
+    <%= render "shared/nav" %>
     
-    <div>
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_me_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blogs", blogs_path %></div>
-      <div><%= link_to "Portfolios", portfolios_path %></div>
-    </div>
+    <%= yield %>
     
     <% if session[:source] %>
       <p>Thanks for visitng me from <%= session [:source] %></p>
