--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
 <h1>Contact Me</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "5555555555" %></p>
+
+<p><%= number_to_currency "150" %></p>
+
+<p><%= number_with_delimiter "15318615320" %></p>
