Updated styles and added map on contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Me</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<p>I'm Alexander Fenton, or just Alex for short.</p>
+<p>I'm attending Weber State University right now, working towards my Bachelor's Degree in Computer Science. </p>
