--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome to the homepage of Alex Fenton</h1>
+  <p class="lead">Here I detail the skills that I have, projects that I have been a part of, and other programming related information about myself. </p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class:"btn btn-lg btn-secondary" %>
   </p>
