--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,15 @@
+<div class="container">
+
+  <div class="row">
+
+    
+  </div><!-- /.row -->
+
+</div>
+
+
+
+
 <p id="notice"><%= notice %></p>
 
 <h1>Blogs</h1>
