Implemented partials for blog, font-awesome, and pagination

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -27,7 +27,7 @@
         
         
         <!--Start of side bar-->
-          <%= render 'shared/shared_sidebar' %>
+          <%= render 'shared/blog_sidebar' %>
         <!--End of side bar-->
         </div>
         
