--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,16 +1,15 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <p>I am a college student working towards my Associate's Degree in Computer Science at Weber State University.</p>
   </div>
 
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"><%= fa_icon "github" %></a></li>
-      <li><a href="#"><%= fa_icon "twitter" %></a></li>
-      <li><a href="#"><%= fa_icon "facebook" %></a></li>
-      <li><a href="#"><%= fa_icon "instagram" %></a></li>
+      <li><a href="https://github.com/Houdini111"><%= fa_icon "github" %></a></li>
+      <li><a href="https://twitter.com/houdiniman111"><%= fa_icon "twitter" %></a></li>
+      <li><a href="https://www.facebook.com/alex.fenton.111"><%= fa_icon "facebook" %></a></li>
     </ol>
   </div>
 </div>
