Added Houdini111 logo to About Me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,14 @@
 <h1>About Me</h1>
-<p>I'm Alexander Fenton, or just Alex for short.</p>
-<p>I'm attending Weber State University right now, working towards my Bachelor's Degree in Computer Science. </p>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "Logo V3-Crop.png", width: 300, alt: "Houdini 1 1 1 logo" %>
+  </div>
+  
+  <div class="col-md-8">
+    <p>I'm Alexander Fenton, or just Alex for short.</p>
+    <p>I'm attending Weber State University right now, working towards my Bachelor's Degree in Computer Science. </p>
+  </div>
+</div>
