--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -159,6 +159,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -176,4 +177,23 @@ Custom Styles
 
 .social-links li {
   font-size: 2.5em;
+}
+
+.card-block {
+  padding: 0.8rem;
+}
+
+.comment-card > .card {
+  margin-top: 15px;
+}
+
+.comment-name {
+  font-weight: 700;
+}
+
+.comment-attribution {
+  font-size: 0.7em;
+  font-style: italic;
+  color: rgb(145, 145, 145);
+  padding-top: 8px;
 }
