--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -25,7 +25,25 @@
     <%= f.text_area :body, class: 'form-control', rows: 15, placeholder: "Content" %>
   </div>
 
-  <div class="form-group">
-    <%= f.submit "Submit", class: 'btn btn-primary' %>
+  <div class="row">
+    <div class="col-md-6 blog-edit-footer">
+      <div class="form-group ">
+        <%= f.submit "Submit", class: 'btn btn-primary' %>
+      </div>
+    </div>
+    <div class="col-md-6 blog-edit-footer">
+      <%= f.radio_button :status, 'draft' %>
+      <%= f.label :status, 'Draft' %>
+      
+      <%= f.radio_button :status, 'published' %>
+      <%= f.label :status, 'Published' %>
+      
+      <label class="publication-switch">
+        <%= f.label :status, 'Published', :class=>"inner-text" %>
+        <input type="checkbox">
+        <span class="slider"></span>
+        
+      </label>
+    </div>
   </div>
 <% end %>
