--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -224,68 +224,142 @@ Custom Styles
 
 
 
-/* The switch - the box around the slider */
+//My published status
+/*
 .publication-switch {
-  position: relative;
-  display: inline-block;
-  width: 94px;
-  height: 42px;
   float: right;
 }
 
-/* Hide default HTML checkbox */
-.publication-switch input { display:none; }
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .2s;
-  border-radius: 5px;
+.publication-switch input {
+  -webkit-appearance: none;
+	//background-color: #FF0000;
+	border: 1px solid #cacece;
+	padding: 9px;
+	border-radius: 3px;
+	height: 42px;
+	//width: 220px;
 }
 
-.slider:before {
+
+.publication-switch input:checked {
+  background-color: #36b82e;
+  transition: background-color 0.5s;
+}
+
+
+.publication-switch input:not(:checked) {
+  background-color: #ececec;
+  transition: background-color 0.5s;
+}
+
+.publication-switch input:checked:before {
+  float: left;
+  content: "Published";  
+  position: relative;
+  color: white;
+  opacity: 1;
+  transition: opacity 5s;
+}
+.publication-switch input:not(:checked):before {
+  opacity: 0;
+  transition: opacity 5s
+}
+
+
+.publication-switch input:not(:checked):after {
+  float: right;
+  content: "Unpublished";
+  position: relative;
+  color: black;
+  opacity: 1;
+  transition: opacity 5s;
+}
+.publication-switch input:checked:after {
+  opacity: 0;
+  transition: opacity 5s;
+}
+*/
+
+
+
+
+
+//My Publication Switch
+.publication-switch {
+  float: right;
+}
+
+.switch-top {
+  background-color: black;
   position: absolute;
-  content: "";
-  height: 34px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  width: 50px;
+  height: 42px;
+}
+
+.publication-switch input {
+  -webkit-appearance: none;
+  position: absolute;
+  background-color: gray;
+  width: 200px;
+  height: 42px;
+  
+}
+
+.publication-switch input:checked ~ .switch-top {
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border-radius: 5px;
 }
 
-input:checked + .inner-text + .slider {
-  background-color: #2196F3;
+.publication-switch input:not(:checked) ~ .switch-top {
+  background-color: black;
 }
 
-input:focus + .inner-text + .slider {
-  box-shadow: 0 0 1px #2196F3;
+/*
+.publication-switch input {
+  -webkit-appearance: none;
+	background-color: #FF0000;
+	border: 1px solid #cacece;
+	padding: 9px;
+	border-radius: 3px;
+	height: 42px;
+	width: 220px;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(60px);
-  -ms-transform: translateX(60px);
-  transform: translateX(60px);
+
+.publication-switch input:checked {
+  background-color: #36b82e;
+  transition: background-color 0.5s;
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
+
+.publication-switch input:not(:checked) {
+  background-color: #ececec;
+  transition: background-color 0.5s;
 }
 
-.slider.round:before {
-  border-radius: 50%;
+.publication-switch input:checked:before {
+  float: left;
+  content: "Published";  
+  position: absolute;
+  color: white;
+  opacity: 1;
+  transition: opacity 5s;
+}
+.publication-switch input:not(:checked):before {
+  opacity: 0;
+  transition: opacity 5s
 }
 
-.inner-text {
-  text-align: center;
+
+.publication-switch input:not(:checked):after {
+  float: right;
+  content: "Unpublished";
+  position: relative;
+  color: black;
+  opacity: 1;
+  transition: opacity 5s;
 }
+.publication-switch input:checked:after {
+  opacity: 0;
+  transition: opacity 5s;
+}
+*/
