Updated source tracking feature

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -230,6 +230,10 @@ Custom Styles
   margin-bottom: 30px;
 }
 
+.blog-sidebar-source {
+  margin-top: 20px;
+}
+
 
 //My Publication Switch
 .publication-switch {
