--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>I am a college student working towards my Associate's Degree in Computer Science at Weber State University.</p>
   </div>
   
+  <%= source_helper("alert alert-info blog-sidebar-source") %>
+  
   <div class="sidebar-module">
     <h4>Topics</h4>
     <% @side_bar_topics.each do |topic| %>
