Implemented style changes for about and contact pages

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,16 @@
-<h1>Contact Me</h1>
-
-<!-- <p><%= number_to_phone "5555555555" %></p> -->
-
-<p>You can contact me <%= mail_to "xela.notnef@gmail.com", "Here.", subject: "Portfolio Contact" %></p>
-
-
-<p>Below is the location of Weber State University, which I attend.</p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3002.3134045920337!2d-111.94747278410074!3d41.19314037928246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875308ae0ac27de1%3A0xfa252c9331201273!2sWeber+State+University+Technical+Education!5e0!3m2!1sen!2sus!4v1498495563460" width="500" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Contact Me</h1>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <!-- <p><%#= number_to_phone "5555555555" %></p> -->
+        <p>You can contact me at <%= mail_to "xela.notnef@gmail.com", "Here.", subject: "Portfolio Contact" %></p>
+      </div>
+      <div class="col-md-6">
+        <p>Below is the location of Weber State University, which I attend.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3002.3134045920337!2d-111.94747278410074!3d41.19314037928246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875308ae0ac27de1%3A0xfa252c9331201273!2sWeber+State+University+Technical+Education!5e0!3m2!1sen!2sus!4v1498495563460" width="500" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
