--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -223,3 +223,26 @@ body {
 .tech-news > .card {
   padding: 30px;
 }
+
+
+.app-card-container {
+  color: black;
+  text-align: left;
+}
+
+.app-card-container > .card {
+  padding: 40px;
+}
+
+.profile-img {
+  border: 1px solid grey;
+}
+
+.app-card-container a {
+  color: #3f77ff;
+}
+
+
+.profile-pic {
+  border: 1px solid gray;
+}
