--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,6 +12,51 @@
       <div class="col-md-8">
         <p>I'm Alexander Fenton, or just Alex for short.</p>
         <p>I'm attending Weber State University right now, working towards my Bachelor's Degree in Computer Science. </p>
+      
+        <p>
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+          > Job History </button>
+        </p>
+        
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Job 1
+            </div>
+            <div class="card card-block">
+              Job 2
+            </div>
+          </div>
+        </p>
+        
+        
+        <p>
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          > Education </button>
+        </p>
+        
+        <p>
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              School 1
+            </div>
+            <div class="card card-block">
+              Education 2
+            </div>
+          </div>
+        </p>
       </div>
     </div>
   </div>
