Filled job and education information on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,10 +27,29 @@
         <p>
           <div class="collapse" id="jobHistory">
             <div class="card card-block">
-              Job 1
+              <p>Newspaper Delivery for Standard Examiner</p>
+              <p>2005 - 2015</p>
+              <p>Deliver newspapers to porch (or otherwise designated area) in good condition by 6:30 AM every morning.</p>
             </div>
             <div class="card card-block">
-              Job 2
+              <p>Computer Science Tutor for Weber State University</p>
+              <p>August 2016 - Current</p>
+              <p>Assist students with their Computer Science class problems. This includes programming concepts, methods, and debugging. </p>
+            </div>
+            <div class="card card-block">
+              <p>Computer Science Teacher's Assistant for Weber State University</p>
+              <p>Fall 2016</p>
+              <p>Test student code, check for errors, and award points based  soundness of code logic and understanding of the task. </p>
+            </div>
+            <div class="card card-block">
+              <p>Mentor for Simply Coding</p>
+              <p>Summer 2017</p>
+              <p>Help teenage students with ciriculum related problems for both the Javascript and Minecraft modding (Java) courses.</p>
+            </div>
+            <div class="card card-block">
+              <p>College Mentor for Code To Success</p>
+              <p>Summer 2017</p>
+              <p>Help high school students with Rails problems, both on location and across the state online.</p>
             </div>
           </div>
         </p>
@@ -50,10 +69,14 @@
         <p>
           <div class="collapse" id="education">
             <div class="card card-block">
-              School 1
+              <p>Weber High School</p>
+              <p>Fall 2012 - Spring 2015</p>
+              <p>Obtained high school diploma.</p>
             </div>
             <div class="card card-block">
-              Education 2
+              <p>Weber State University</p>
+              <p>Fall 2017 - Current</p>
+              <o>Obtained Associate's Degree in Computer Science, working towards Bachelor's Degree.</o>
             </div>
           </div>
         </p>
