--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,6 +7,23 @@
     <div class="row">
       <div class="col-md-4">
         <%= image_tag "Logo V3-Crop.png", width: 300, alt: "Houdini 1 1 1 logo", class: "profile-pic" %>
+        
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <h4><%= skill.title %></h4>
+            <div class="skill">
+              <div class="progress">
+                <div 
+                  class="progress-bar progress-bar-striped bg-info"
+                  role="progressbar"
+                  aria-valuenow="<%= skill.percent_utilized %>"
+                  aria-valuemax="100"
+                  style="width: <%= skill.percent_utilized %>%"
+                ></div>
+              </div>
+            </div>
+          <% end %>
+        </div>
       </div>
       
       <div class="col-md-8">
