Integrated custom fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,18 @@
 @import "bootstrap";
 @import "gritter";
 
+
+@font-face {
+  font-family: 'Raleway';
+  src:font-url('Raleway-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:font-url('Roboto-Regular.ttf');
+}
+
+
 /*
  * Globals
  */
@@ -165,6 +177,21 @@ body {
 /*
  * Custom Styles
  */
+ 
+body {
+  font-family: 'Raleway', sans-serif;
+}
+ 
+h1, .h1, 
+h2, .h2, 
+h3, .h3,
+h4, .h4, 
+h5, .h5, 
+h6, .h6 {
+  font-family: 'Roboto', sans-serif;
+}
+ 
+ 
 .card-block {
   color: black;
   text-align: left;
