--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,6 +2,18 @@
 @import "font-awesome";
 @import "gritter";
 
+
+@font-face {
+  font-family: 'Raleway';
+  src:font-url('Raleway-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:font-url('Roboto-Regular.ttf');
+}
+
+
 /*
  * Globals
  */
@@ -26,7 +38,27 @@ h6, .h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #333;
+  font-family: 'Roboto', sans-serif;
 }
+
+//////////////
+//CUSTOM CSS//
+//////////////
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, .h1, 
+h2, .h2, 
+h3, .h3,
+h4, .h4, 
+h5, .h5, 
+h6, .h6 {
+  font-family: 'Roboto', sans-serif;
+}
+
+
 
 
 /*
