--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,9 +2,19 @@
 @import "jquery-ui";
 @import "gritter";
 
+@font-face {
+  font-family: 'Raleway';
+  src:font-url('Raleway-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:font-url('Roboto-Regular.ttf');
+}
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
+  font-family: 'Raleway', sans-serif;
 }
 
 .navbar {
@@ -65,6 +75,20 @@ footer p {
 /*
 Custom styles
 */
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, .h1, 
+h2, .h2, 
+h3, .h3,
+h4, .h4, 
+h5, .h5, 
+h6, .h6 {
+  font-family: 'Roboto', sans-serif;
+}
+
 
 .portfolio-container {
   padding-top: 30px;
